tests/NormalTests/paczka1/small_fuzzy/21989609.err
Error in line 2: d7sf1E A481 21,2
Error in line 4: d7sf1E A235 26,7
